# entity-attribute-backend

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: continuous-integration.yml  master-release.yml
alembic/: env.py
alembic/versions/: cf4ae96be50d_initial_model.py  e5be9c052fa1_initial_model.py
eav_backend/: __main__.py  config.py  database.py  dependencies.py  migrate.py
eav_backend/builders/: EntityBuilder.py
eav_backend/models/: AssetContent.py  __init__.py  asset.py  attribute.py  attribute_definition.py  attribute_type.py  endpoint_type.py  entity.py  entity_definition.py  entity_relation.py  entity_relation_definition.py  exceptions.py
eav_backend/routes/v1/: admin_routes.py  asset_routes.py  entity_routes.py
eav_backend/schemas/: asset.py  attribute_definition.py  basemodel.py  entity_definition.py  entity_relation.py
eav_backend/services/: asset_service.py  dynamic_model_service.py  entity_definition_service.py  entity_import_service.py  entity_service.py
eav_backend/util/: endpoint_utils.py
examples/entities/: 00_incident.json  01_event.json  02_project.json
