[tool.poetry]
name = "eav-backend"
version = "0.0.1"
description = "Backend for registry applications"
authors = ["Kenneth Stigen <kenneth.stigen@knowit.no>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.13"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.0"
uvicorn = "^0.34.0"
prometheus-fastapi-instrumentator = "^7.0.2"
sqlalchemy = "^2.0.38"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.1"
alembic-utils = "^0.8.6"
geoalchemy2 = "^0.17.1"
shapely = "^2.0.7"
geojson-pydantic = "^1.2.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
#black = "^23.9.1"
#pytest = "^7.4.2"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
